[package]
authors = ["Brendan C. Ward"]
name = "rastertiler"
description = "Render a single-band GeoTIFF to MBTiles"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
crossbeam = "0.8"
gdal = "0.16"
gdal-sys = "0.9"
hex = "0.4"
png = "0.17"
indicatif = "0.17"
itertools = "0.10"
libc = "0.2"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = "0.29"
rust-crypto = "0.2"
seahash = "4.1"

[dev-dependencies]
rstest = "0.18"

[profile.dev.package.png]
opt-level = 3

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true
