[package]
authors = ["Brendan C. Ward"]
name = "rastertiler"
description = "Render a single-band GeoTIFF to MBTiles"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
gdal = { git = "https://github.com/georust/gdal.git" }
gdal-sys = { git = "https://github.com/georust/gdal.git" }
# TODO: update gdal once released with 3.10 support
# gdal = "0.17"
# gdal-sys = "0.10"
hex = "0.4"
png = "0.17"
indicatif = "0.17"
itertools = "0.13"
libc = "0.2"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rusqlite = "0.32"
seahash = "4.1"

[dev-dependencies]
rstest = "0.22"

[profile.dev.package.png]
opt-level = 3

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true
